<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp" android:layout_height="match_parent">

    <Button
        android:text="@string/signup_string"
        android:layout_width="170dp"
        android:id="@+id/button_signup"
        android:layout_height="50dp"
        android:layout_below="@+id/button_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/login_string"
        android:layout_marginTop="11dp"
        android:id="@+id/button_login"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/high_score_string"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:id="@+id/button_highscore"
        android:layout_below="@+id/button_signup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>