<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gx60.semiproject.Menu">

    <include android:id="@+id/normal_bar"
        layout="@layout/normal_bar"></include>

    <Button
        android:text="@string/buy_credit_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buycredits_button"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/play_button" />

    <Button
        android:text="FIND FRIENDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/findfriend_button"
        android:layout_below="@+id/buycredits_button"
        android:layout_alignStart="@+id/highscore_button" />

    <Button
        android:text="@string/play_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="114dp"
        android:layout_marginStart="112dp"
        android:id="@+id/play_button"
        android:layout_above="@+id/buycredits_button"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/high_score_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highscore_button"
        android:layout_below="@+id/findfriend_button"
        android:layout_alignStart="@+id/buycredits_button" />

    <Button
        android:text="SIGN OUT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signout_button"
        android:layout_below="@+id/findfriend_button"
        android:layout_alignStart="@+id/highscore_button"
        android:layout_marginTop="52dp" />

    <ImageView
        android:layout_width="150dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/PPView"
        android:layout_marginStart="88dp"
        android:layout_height="100dp"
        android:layout_above="@+id/play_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />
</RelativeLayout>
